--- a/Nyss_lab2_parser/DataGridWindow.xaml
+++ b/Nyss_lab2_parser/DataGridWindow.xaml
@@ -16,6 +16,10 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="save_Button" Click="SaveBase" Content="Сохранить" HorizontalAlignment="Left" Margin="41,389,0,0" VerticalAlignment="Top" Width="161" Background="#FF464EFF" FontWeight="Bold" Foreground="White"/>
+        <Button x:Name="button_Prev" Content="Назад" HorizontalAlignment="Left" Margin="333,389,0,0" VerticalAlignment="Top" Width="75" Click="GoPrevPage"/>
+        <Button x:Name="button_Next" Content="Вперед" HorizontalAlignment="Left" Margin="413,389,0,0" VerticalAlignment="Top" Width="75" Click="GoNextPage"/>
+        <Button x:Name="button_First" Content="Первая" HorizontalAlignment="Left" Margin="253,389,0,0" VerticalAlignment="Top" Width="75" Click="GoFirstPage"/>
+        <Button x:Name="button_Last" Content="Последняя" HorizontalAlignment="Left" Margin="493,389,0,0" VerticalAlignment="Top" Width="75" Click="GoLastPage"/>
 
     </Grid>
 </Window>
