--- a/Nyss_lab2_parser/DataGridWindow.xaml
+++ b/Nyss_lab2_parser/DataGridWindow.xaml
@@ -16,10 +16,11 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="save_Button" Click="SaveBase" Content="Сохранить" HorizontalAlignment="Left" Margin="41,389,0,0" VerticalAlignment="Top" Width="161" Background="#FF464EFF" FontWeight="Bold" Foreground="White"/>
-        <Button x:Name="button_Prev" Content="Назад" HorizontalAlignment="Left" Margin="333,389,0,0" VerticalAlignment="Top" Width="75" Click="GoPrevPage"/>
+        <Button x:Name="button_Prev" Content="Назад" HorizontalAlignment="Left" Margin="322,389,0,0" VerticalAlignment="Top" Width="75" Click="GoPrevPage"/>
         <Button x:Name="button_Next" Content="Вперед" HorizontalAlignment="Left" Margin="413,389,0,0" VerticalAlignment="Top" Width="75" Click="GoNextPage"/>
-        <Button x:Name="button_First" Content="Первая" HorizontalAlignment="Left" Margin="253,389,0,0" VerticalAlignment="Top" Width="75" Click="GoFirstPage"/>
+        <Button x:Name="button_First" Content="Первая" HorizontalAlignment="Left" Margin="242,389,0,0" VerticalAlignment="Top" Width="75" Click="GoFirstPage"/>
         <Button x:Name="button_Last" Content="Последняя" HorizontalAlignment="Left" Margin="493,389,0,0" VerticalAlignment="Top" Width="75" Click="GoLastPage"/>
+        <Button x:Name="save_Button_Copy" Click="UpdateBase" Content="Обновить" Margin="604,389,27,0" Background="#FF464EFF" FontWeight="Bold" Foreground="White" Height="20" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
