--- a/ClientApp/src/components/HomePage/HomePage.module.css
+++ b/ClientApp/src/components/HomePage/HomePage.module.css
@@ -5,6 +5,7 @@
 }
 .header_text_common {
     text-align: center;
+    font-size:1.2em;
     
 }
 .homepage_wrapper {
@@ -40,6 +41,21 @@
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     transition-property: all;
 }
+.filepicker_button_encrypt {
+    margin-top: 1em;
+    width: 30%;
+    text-align: center;
+    outline: none !important;
+    border: none;
+    background: #FC2847;
+    color: white;
+    border-radius: 1em;
+    padding: 1em;
+    font-weight: 600;
+    font-size: 1.1em;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    transition-property: all;
+}
 .filepicker_input {
     margin-top: 1em;
     width: 30%;
@@ -57,27 +73,34 @@
     
 }
 
-    .filepicker_button:hover {
+.filepicker_button:hover {
         transition: 0.3s;
         background: rgb(128,255,68);
        
-    }
+}
 .Form_wrapper__input {
     width: 100%;
     padding: 1em;
-    border: 1px solid black;
+    border: 1px solid silver;
     border-radius: 1em;
-    margin:1em 0;
+    margin: 1em 0;
 }
 .Form_wrapper__textarea {
     width: 100%;
     min-height:250px;
-    border: 1px solid black;
+    border: 1px solid silver;
     border-radius: 1em;
     padding:1em;
+   
 }
 .Form_wrapper{
     display:flex;
     flex-direction:column;
     align-items:center;
+}
+.textarea__output {
+    color: #008000!important;
+}
+.textarea__output_encrypt {
+    color: #FC2847!important;
 }
