--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -5,14 +5,21 @@ a.navbar-brand {
 }
 
 html {
-  font-size: 14px;
+  font-size: 1em;
 }
 @media (min-width: 768px) {
   html {
-    font-size: 16px;
+    font-size: 1em;
   }
 }
 
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+.header_wrapper{
+    background-color: #fff;
+    font-size:1.5em;
+}
+.header__logo{
+    white-space:nowrap!important;
 }
